--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="e">
 <head>
-    <meta charset="utf-8"
-    
+    <meta charset="utf-8">
+    <meta http-equiv= "X-UA-compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body
+   <h1> </h1>
+</body>
+</html>
