--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="e">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv= "X-UA-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body
+   <header>
    <h1>aqui vai ser imagem </h1>
+   <ul>
+         <li>escola</li>
+         <li>estudante</li>
+   </ul>
+   </header>
 </body>
 </html>
