--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body
    <header>
-   <h1>aqui vai ser imagem </h1>
+   <img src="download.jpeg"
    <ul>
-         <li>escola</li>
-         <li>estudante</li>
+         <li>merece notao</li>
+         <li>pedro gostoso</li>
    </ul>
    </header>
 </body>
 </html>
+
