--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body
    <header>
-   <img src="download.jpeg"
+   <img src="download (1).jpeg"
    <ul>
          <li>merece notao</li>
          <li>pedro gostoso</li>
